fix: solved some sonar warnings since they came up again